main.css
* {
  font-family: monospace;
  margin: 0;
  padding: 0;
}

#topHalf{
  position: relative;
  width: 100%;
  height: 25%;
  background-color: rgb(224,58,62); /*official UMD red rgb*/
  text-align: center;
}

#bottomHalf{
  position: relative;
  width: 100%;
  height: 75%;
  background-color: white;
}

#schoolImages {
  display: table;
  margin: 0 auto;
  padding-top: 150px;
}
#CSLogo, #MathLogo {
  padding: 50px;
  height: 75px;
  width: auto;
}
/*----------Courses Style----------*/
#list {
  position: relative;
  display: inline-block;
  margin: auto;
  top: 40%;
  padding: 0px;
  font-size: 18px;
  list-style-type: none;
}
#list li {
  float: left;
  padding: 10px 5px;
}
#list li a {
  color: black;
  text-decoration: none;
  padding: 2px 8px;
}
#list li a:hover {
  color: rgb(255,255,255);
  border-style: outset;
  border-width: 2px;
}

#title {
  position: relative;
  text-align: center;
  font-size: 16px;
  top: 25%;
  margin: 0 0 10px;
}
#name {
  padding-bottom: 20px;
}

table, th, td {
  font-size: 15px;
  border: 1px outset black;
  padding: 2px;
  text-align: left;
}
tr:hover {
  color: rgb(255,213,32); /*official UMD gold rgb*/
}
.table_header:hover {
  color: rgb(0,0,0);
}
table {
  margin: 10px;
  display: inline-block;
}

#math_table_title, #cs_table_title {
  color: rgb(224,58,62); /*official UMD red rgb*/
  text-align: center;
}

#course_tables {
  position: relative;
  margin: 0 auto;
  width: 75%;
  top: 5%;

}
/*----------Experience Style----------*/
#description {
  display: block;
  text-align: justify;
  font-size: 15px;
  margin: 0 auto;
  width: 75%;
  padding-top: 50px;
  line-height: 20px;
}
#viewMoreBelow {
  color: rgb(224,58,62); /*official UMD red rgb*/
  margin: auto;
  text-align: center;
  margin: 0 auto;
  padding-top: 40px;
  padding-bottom: 10px;
}
#internshipLogos {
  display: table;
  margin: 0 auto;
}
#LeidosLogo, #NASALogo {
  padding: 50px;
  padding-bottom: 60px;
  height: 150px;
  width: auto;
}
#LeidosLogo:hover, #NASALogo:hover {
  height: 150px;
  width: auto;
  transform: scale3d(1.05, 1.05, 1.05);
}
#linkToOtherJobs {
  text-align: center;
}
#otherJobsLink:link, #otherJobsLink:visited {
  color: rgb(255,213,32); /*official UMD gold rgb*/
}
#otherJobsLink:hover {
  color: rgb(224,58,62); /*official UMD red rgb*/
}
/*----------LeidosInternship & NASAInternship Style----------*/
#LeidosTitle, #NASATitle{
  padding-top: 50px;
  text-align: center;
  margin: 0 auto;
  padding-bottom: 20px;
}
#LeidosSymbol {
  display: block;
  margin: auto;
  padding-bottom: 0px;
}
#NASASymbol {
  display: block;
  margin: auto;
  padding-top: 20px;
  padding-bottom: 40px;
}
#LeidosDescription, #NASADescription {
  display: block;
  text-align: justify;
  font-size: 15px;
  margin: 0 auto;
  width: 75%;
  line-height: 20px;
}
/*----------OtherJobs Style----------*/
#OtherJobsTitle {
  text-align: center;
  padding-top: 50px;
}
#JobList{
  padding-top: 25px;
  display: block;
  margin: auto;
  text-align: center;
}
.jobImage{
  display: block;
  padding-right: 10px;
}
.jobDescription {
  text-align: center;
  font-size: 14px;
}
#JobsTable {
  padding-top: 20px;
  text-align: center;
  margin-left: 5%;
  margin-right: 5%;
  border: none;
  width: 90%;
}
#JobsTable table, #JobsTable th, #JobsTable td {
  font-size: 15px;
  border: none;
  padding: 10px;
  text-align: justify;
}
#JobsTable tr:hover {
  color: rgb(0,0,0);
}

